2006-04-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: support new lds stuff
	* src/GrampsDb/_WriteXML.py: support new lds stuff
	* src/GrampsDb/_ReadGedcom.py: support new lds stuff
	* src/GrampsDb/_WriteGedcom.py: support new lds stuff
	* src/Editors/_EditLdsOrd.py: save place information
	* src/GrampsWidgets.py: select default value in menu
	* src/BaseDoc.py: pylint
	* src/DisplayTabs.py: handle temple not set for LdsOrd
	* src/RelLib/_LdsOrd.py: unserialize returns self
	* src/RelLib/_LdsOrdBase.py: variable name change

2006-04-04  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/_ImgManip.py: open images as binary
	* src/docgen/ODFDoc.py: open images as binary, fix image embedding
	* src/docgen/OpenOfficeDoc.py: open images as binary

2006-04-04  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_LdsOrd.py: lds status changes
	* src/Editors/_EditLdsOrd.py: lds status changes
	* src/DisplayTabs.py: lds status changes
	* src/GrampsWidgets.py: lds status changes
	* src/glade/gramps.glade: lds status changes
	* src/lds.py: lds status changes

2006-04-04  Alex Roitman  <shura@gramps-project.org>
	* README, INSTALL: update.

2006-04-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: new upgrade for LDS change
	* src/Editors/_EditLdsOrd.py: addedn
	* src/Editors/__init__.py: add EditLdsOrd
	* src/Editors/_EditPerson.py: LDS support
	* src/RelLib/_LdsOrdBase.py: added
	* src/RelLib/_Person.py: use a list of LdsOrds
	* src/RelLib/_Family.py: use a list of LdsOrds
	* src/RelLib/_LdsOrd.py: add type field
	* src/DisplayTabs.py: lds tab
	* src/GrampsWidgets.py: menus
	* src/glade/gramps.glade: lds support
	* src/lds.py: additional support

2006-04-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Fix lds ord; Add new option
	to put a linebreak into each textfield

2006-04-03  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/_ImgManip.py: fix typo